# CHIron

./: .gitignore  ERRATA.md  README.md
app/clog2coverage/: Makefile  Makefile.config
app/clog2log/: Makefile
app/clog2mkcfg/: Makefile
app/clogan_gui/: .gitignore  CMakeLists.txt  THIRD_PARTY_LICENSES.Qt-Community.txt
app/clogan_gui/assets/: clogan_gui_resources.qrc  clogan_gui_windows_icon.rc
app/clogan_gui/cmake/: export_mingw_symbols.cmake  preserve_mingw_debug_symbols.cmake
app/clogan_gui/scripts/: build_linux.sh  build_macos.sh  build_windows.ps1
app/clogan_gui/src/: address_widget.cpp  address_widget.hpp  bug_reporter.cpp  bug_reporter.hpp  cache_widget.cpp  cache_widget.hpp  channel_badge_painter.hpp  chiron_b_adapter.hpp  chiron_eb_adapter.hpp  chiron_eb_expresso.hpp  clipboard_widget.cpp  clipboard_widget.hpp  clog_b_trace_loader.cpp  clog_b_trace_loader.hpp  clogan_gui_loader_bench.cpp  config.hpp  errors_widget.cpp  errors_widget.hpp  filter_parallel_utils.hpp  flit_details_model.cpp  flit_details_model.hpp  flit_edit_adapter.cpp  flit_edit_adapter.hpp  flit_record.hpp  flit_table_model.cpp  flit_table_model.hpp  flit_transaction_keys.hpp  gui_colors.hpp  gui_format.hpp  latency_analysis.cpp  latency_analysis.hpp  latency_diff_export.cpp  latency_diff_export.hpp  latency_diff_widget.cpp  latency_diff_widget.hpp  latency_widget.cpp  latency_widget.hpp  main.cpp  main_window.cpp  main_window.hpp  (+34 more)
app/clogan_gui/tests/: bug_reporter_test_stub.cpp  clogan_gui_critical_tests.cpp  run_staged_executable.ps1
app/report_flit/: Makefile  Makefile.config  Makefile.kmhv2_b  Makefile.kmhv2_eb
app/xsdb2clog/: Makefile
cchi/basic/: cchi_components.hpp  cchi_parameters.hpp
cchi/spec/: cchi_protocol_encoding.hpp  cchi_protocol_flits.hpp
cchi/util/: cchi_util_decoding.hpp
cchi/xact/: cchi_xact_flit.hpp  cchi_xact_global.hpp
chi/basic/: chi_conn.hpp  chi_parameters.hpp
chi/expresso/: chi_expresso_denial.hpp  chi_expresso_denial_header.hpp  chi_expresso_flit.hpp  chi_expresso_flit_header.hpp
chi/spec/: chi_link_channels.hpp  chi_link_channels_header.hpp  chi_link_interfaces.hpp  chi_link_interfaces_header.hpp  chi_link_links.hpp  chi_link_links_header.hpp  chi_link_ports.hpp  chi_link_ports_header.hpp  chi_protocol_defines.hpp  chi_protocol_encoding.hpp  chi_protocol_encoding_header.hpp  chi_protocol_flits.hpp  chi_protocol_flits_header.hpp
chi/util/: chi_util_decoding.hpp  chi_util_decoding_header.hpp  chi_util_flit.hpp  chi_util_flit_builder.hpp  chi_util_flit_builder_dat.hpp  chi_util_flit_builder_dat_header.hpp  chi_util_flit_builder_header.hpp  chi_util_flit_builder_req.hpp  chi_util_flit_builder_req_header.hpp  chi_util_flit_builder_rsp.hpp  chi_util_flit_builder_rsp_header.hpp  chi_util_flit_builder_snp.hpp  chi_util_flit_builder_snp_header.hpp  chi_util_flit_header.hpp
chi/xact/: chi_joint.hpp  chi_joint_header.hpp  chi_xact_base.hpp  chi_xact_base_header.hpp  chi_xact_checkers.hpp  chi_xact_checkers_field.hpp  chi_xact_checkers_field_header.hpp  chi_xact_checkers_header.hpp  chi_xact_field.hpp  chi_xact_field_eb.hpp  chi_xact_field_header.hpp  chi_xact_flit.hpp  chi_xact_flit_header.hpp  chi_xact_global.hpp  chi_xact_global_header.hpp  chi_xact_state.hpp  chi_xact_state_header.hpp  chi_xactions.hpp  chi_xactions_header.hpp
chi_b/spec/: chi_b_link.hpp  chi_b_link_channels.hpp  chi_b_link_interfaces.hpp  chi_b_link_links.hpp  chi_b_link_ports.hpp  chi_b_protocol.hpp  chi_b_protocol_encoding.hpp  chi_protocol_flits.hpp
chi_b/util/: chi_b_util_decoding.hpp  chi_b_util_flit.hpp
chi_c/spec/: chi_c_protocol_flits.hpp
chi_eb/spec/: chi_eb_link.hpp  chi_eb_link_channels.hpp  chi_eb_link_interfaces.hpp  chi_eb_link_links.hpp  chi_eb_link_ports.hpp  chi_eb_protocol.hpp  chi_eb_protocol_encoding.hpp  chi_eb_protocol_flits.hpp  chi_protocol_flits.hpp
chi_eb/util/: chi_eb_util_decoding.hpp  chi_eb_util_flit.hpp
chi_eb/xact/: chi_eb_joint.hpp  chi_eb_xact_base.hpp  chi_eb_xact_checkers_field.hpp  chi_eb_xact_field.hpp  chi_eb_xact_flit.hpp  chi_eb_xact_global.hpp  chi_eb_xactions.hpp  (+1 more)
clog/: clog.hpp  clog_t.hpp  clog_t_util.hpp  clogdpi.cpp  clogdpi.hpp  clogdpi.svh
common/: eventbus.hpp  nonstdint.hpp  utility.hpp
docs/: architecture-overview.md  chi-protocol-stack.md  clog-and-tools.md  guide-adding-opcodes.md  guide-adding-transaction-models.md  quick-guide-state-trackers.md  quick-guide-transaction-models.md  transaction-layer.md  uvm_integration_guide.md  uvm_quickstart.md
hn/: chi_hn.hpp  chi_hn_header.hpp
test/tc_chi_xact_state/: CMakeLists.txt
test/tc_chi_xact_state/src/: common.hpp  main.cpp  tc_common.hpp  tc_common_initial.cpp  tc_common_initial.hpp  tc_common_resp.cpp  tc_common_resp.hpp  tcpt_a_initial_read.hpp  tcpt_a_initial_read_e.cpp  tcpt_b_initial_dataless.hpp  tcpt_b_initial_dataless_e.cpp  tcpt_c_initial_write.hpp  tcpt_c_initial_write_e.cpp  tcpt_d_initial_atomic.hpp  tcpt_d_initial_atomic_e.cpp  tcpt_e_resp_read.hpp  tcpt_e_resp_read_e.cpp  tcpt_f_resp_dataless.hpp  tcpt_f_resp_dataless_e.cpp  tcpt_g_resp_write.hpp  tcpt_g_resp_write_e.cpp  tcpt_h_resp_atomic.hpp  tcpt_h_resp_atomic_e.cpp  tcpt_i_resp_snoop.hpp  tcpt_i_resp_snoop_e.cpp  tcpt_j_resp_snoopfwd.hpp  tcpt_j_resp_snoopfwd_e.cpp
test/tc_chi_xact_state/src/tcpt_i_resp_snoop_e/: tcpt_01_04_SnpOnce.hpp  tcpt_05_08_SnpClean.hpp  tcpt_09_12_SnpShared.hpp  tcpt_13_16_SnpNotSharedDirty.hpp  tcpt_17_18_SnpUnique.hpp  tcpt_19_22_SnpPreferUnique.hpp  tcpt_23_24_SnpCleanShared.hpp  tcpt_25_26_SnpCleanInvalid.hpp  tcpt_27_28_SnpMakeInvalid.hpp
test/tc_chi_xact_state/src/tcpt_j_resp_snoopfwd_e/: tcpt_01_02_SnpOnceFwd.hpp  tcpt_03_06_SnpCleanFwd.hpp  tcpt_07_10_SnpNotSharedDirtyFwd.hpp  tcpt_11_14_SnpSharedFwd.hpp  tcpt_15_15_SnpUniqueFwd.hpp  tcpt_16_19_SnpPreferUniqueFwd.hpp
uvm/: chi_agent.sv  chi_coverage.sv  chi_driver.sv  chi_env.sv  chi_if.sv  chi_monitor.sv  chi_pkg.sv  chi_refmodel_dpi.cpp  chi_scoreboard.sv  chi_seq_item.sv  chi_seq_lib.sv  chi_test.sv  chi_top.sv
vip/: chi_xact_monitor.sv  chi_xact_vip_dpi.cpp  chi_xact_vip_dpi.hpp  chi_xact_vip_dpi.svh
(+74 files in other folders)
